cmake_minimum_required(VERSION 3.14)
project(cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp main.cpp Solution.h Printer.cpp Printer.h DataStructure.cpp DataStructure.h TreeSerialization.cpp TreeSerialization.h Include.h Sort/MergeSort.h Sort/Sort.h OJ_Entrance.cpp Print.cpp Print.h Sort/HeapSort.h Sort/QuickSort.h TestMain.cpp Pointer/AutoPointer.h Pointer/Include.h Pointer/Object.h Pointer/UniquePointer.h Pointer/Deleter.h)